PR Changes vol.1

--- a/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -231,13 +231,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'tiledb' has no attribute 'ArraySchema'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/m9/58b7bc3128xfv4mmg8k45xgw0000gn/T/ipykernel_7083/1096732648.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;32mdef\u001B[0m \u001B[0mget_schema\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdata\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0marray\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mbatch_size\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mint\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0msparse\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mbool\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m->\u001B[0m \u001B[0mtiledb\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mArraySchema\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m     dims = [\n\u001B[1;32m      3\u001B[0m         tiledb.Dim(\n\u001B[1;32m      4\u001B[0m             \u001B[0mname\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m\"dim_\"\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdim\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m             \u001B[0mdomain\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mdata\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mshape\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mdim\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;34m-\u001B[0m \u001B[0;36m1\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mAttributeError\u001B[0m: module 'tiledb' has no attribute 'ArraySchema'"
+     ]
+    }
+   ],
    "source": [
     "def get_schema(data: np.array, batch_size: int, sparse: bool) -> tiledb.ArraySchema:\n",
     "    dims = [\n",
@@ -281,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -313,48 +325,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ArraySchema(\n",
-      "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 99999), tile=64, dtype='int32'),\n",
-      "    Dim(name='dim_1', domain=(0, 2624), tile=2625, dtype='int32'),\n",
-      "  ]),\n",
-      "  attrs=[\n",
-      "    Attr(name='features', dtype='float32', var=False, nullable=False),\n",
-      "  ],\n",
-      "  cell_order='row-major',\n",
-      "  tile_order='row-major',\n",
-      "  capacity=10000,\n",
-      "  sparse=True,\n",
-      "  allows_duplicates=False,\n",
-      ")\n",
-      "\n",
-      "ArraySchema(\n",
-      "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 99999), tile=64, dtype='int32'),\n",
-      "  ]),\n",
-      "  attrs=[\n",
-      "    Attr(name='features', dtype='float32', var=False, nullable=False),\n",
-      "  ],\n",
-      "  cell_order='row-major',\n",
-      "  tile_order='row-major',\n",
-      "  capacity=10000,\n",
-      "  sparse=False,\n",
-      ")\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "user_movie_array = tiledb.open(training_images)\n",
     "ratings_array = tiledb.open(training_labels)\n",
@@ -390,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -424,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -434,45 +411,10 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 12.125900\n",
-      "Train Epoch: 1 Batch: 500 Loss: 1.465070\n",
-      "Train Epoch: 1 Batch: 1000 Loss: 0.877240\n",
-      "Train Epoch: 1 Batch: 1500 Loss: 1.019669\n",
-      "Train Epoch: 1 Batch: 2000 Loss: 1.547905\n",
-      "Train Epoch: 1 Batch: 2500 Loss: 1.290128\n",
-      "Train Epoch: 1 Batch: 3000 Loss: 1.512346\n",
-      "Train Epoch: 2 Batch: 0 Loss: 1.397072\n",
-      "Train Epoch: 2 Batch: 500 Loss: 1.081311\n",
-      "Train Epoch: 2 Batch: 1000 Loss: 0.793776\n",
-      "Train Epoch: 2 Batch: 1500 Loss: 0.953090\n",
-      "Train Epoch: 2 Batch: 2000 Loss: 1.357301\n",
-      "Train Epoch: 2 Batch: 2500 Loss: 1.212574\n",
-      "Train Epoch: 2 Batch: 3000 Loss: 1.460314\n",
-      "Train Epoch: 3 Batch: 0 Loss: 1.317658\n",
-      "Train Epoch: 3 Batch: 500 Loss: 0.963722\n",
-      "Train Epoch: 3 Batch: 1000 Loss: 0.749387\n",
-      "Train Epoch: 3 Batch: 1500 Loss: 0.915388\n",
-      "Train Epoch: 3 Batch: 2000 Loss: 1.265522\n",
-      "Train Epoch: 3 Batch: 2500 Loss: 1.158570\n",
-      "Train Epoch: 3 Batch: 3000 Loss: 1.424815\n",
-      "Train Epoch: 4 Batch: 0 Loss: 1.271664\n",
-      "Train Epoch: 4 Batch: 500 Loss: 0.915351\n",
-      "Train Epoch: 4 Batch: 1000 Loss: 0.722239\n",
-      "Train Epoch: 4 Batch: 1500 Loss: 0.893963\n",
-      "Train Epoch: 4 Batch: 2000 Loss: 1.214354\n",
-      "Train Epoch: 4 Batch: 2500 Loss: 1.116899\n",
-      "Train Epoch: 4 Batch: 3000 Loss: 1.398321\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader\n",
-    "from tiledb.ml.readers.types.typing import ArrayParams\n",
+    "from tiledb.ml.readers.types import ArrayParams\n",
     "\n",
     "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2, \"py.init_buffer_bytes\": 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
