PR Changes vol.2

--- a/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
@@ -237,19 +237,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'tiledb' has no attribute 'ArraySchema'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/m9/58b7bc3128xfv4mmg8k45xgw0000gn/T/ipykernel_7083/1096732648.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;32mdef\u001B[0m \u001B[0mget_schema\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdata\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0marray\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mbatch_size\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mint\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0msparse\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mbool\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m->\u001B[0m \u001B[0mtiledb\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mArraySchema\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m     dims = [\n\u001B[1;32m      3\u001B[0m         tiledb.Dim(\n\u001B[1;32m      4\u001B[0m             \u001B[0mname\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m\"dim_\"\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdim\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m             \u001B[0mdomain\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m0\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mdata\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mshape\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0mdim\u001B[0m\u001B[0;34m]\u001B[0m \u001B[0;34m-\u001B[0m \u001B[0;36m1\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mAttributeError\u001B[0m: module 'tiledb' has no attribute 'ArraySchema'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_schema(data: np.array, batch_size: int, sparse: bool) -> tiledb.ArraySchema:\n",
     "    dims = [\n",
@@ -293,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -325,13 +313,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ArraySchema(\n",
+      "  domain=Domain(*[\n",
+      "    Dim(name='dim_0', domain=(0, 99999), tile=64, dtype='int32'),\n",
+      "    Dim(name='dim_1', domain=(0, 2624), tile=2625, dtype='int32'),\n",
+      "  ]),\n",
+      "  attrs=[\n",
+      "    Attr(name='features', dtype='float32', var=False, nullable=False),\n",
+      "  ],\n",
+      "  cell_order='row-major',\n",
+      "  tile_order='row-major',\n",
+      "  capacity=10000,\n",
+      "  sparse=True,\n",
+      "  allows_duplicates=False,\n",
+      ")\n",
+      "\n",
+      "ArraySchema(\n",
+      "  domain=Domain(*[\n",
+      "    Dim(name='dim_0', domain=(0, 99999), tile=64, dtype='int32'),\n",
+      "  ]),\n",
+      "  attrs=[\n",
+      "    Attr(name='features', dtype='float32', var=False, nullable=False),\n",
+      "  ],\n",
+      "  cell_order='row-major',\n",
+      "  tile_order='row-major',\n",
+      "  capacity=10000,\n",
+      "  sparse=False,\n",
+      ")\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "user_movie_array = tiledb.open(training_images)\n",
     "ratings_array = tiledb.open(training_labels)\n",
@@ -367,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -401,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -411,7 +434,42 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Epoch: 1 Batch: 0 Loss: 11.957862\n",
+      "Train Epoch: 1 Batch: 500 Loss: 1.462596\n",
+      "Train Epoch: 1 Batch: 1000 Loss: 0.882187\n",
+      "Train Epoch: 1 Batch: 1500 Loss: 1.023580\n",
+      "Train Epoch: 1 Batch: 2000 Loss: 1.542000\n",
+      "Train Epoch: 1 Batch: 2500 Loss: 1.283772\n",
+      "Train Epoch: 1 Batch: 3000 Loss: 1.512352\n",
+      "Train Epoch: 2 Batch: 0 Loss: 1.396726\n",
+      "Train Epoch: 2 Batch: 500 Loss: 1.075623\n",
+      "Train Epoch: 2 Batch: 1000 Loss: 0.798218\n",
+      "Train Epoch: 2 Batch: 1500 Loss: 0.956591\n",
+      "Train Epoch: 2 Batch: 2000 Loss: 1.351744\n",
+      "Train Epoch: 2 Batch: 2500 Loss: 1.207230\n",
+      "Train Epoch: 2 Batch: 3000 Loss: 1.460682\n",
+      "Train Epoch: 3 Batch: 0 Loss: 1.319887\n",
+      "Train Epoch: 3 Batch: 500 Loss: 0.957528\n",
+      "Train Epoch: 3 Batch: 1000 Loss: 0.753301\n",
+      "Train Epoch: 3 Batch: 1500 Loss: 0.918645\n",
+      "Train Epoch: 3 Batch: 2000 Loss: 1.260010\n",
+      "Train Epoch: 3 Batch: 2500 Loss: 1.154303\n",
+      "Train Epoch: 3 Batch: 3000 Loss: 1.425381\n",
+      "Train Epoch: 4 Batch: 0 Loss: 1.275712\n",
+      "Train Epoch: 4 Batch: 500 Loss: 0.909295\n",
+      "Train Epoch: 4 Batch: 1000 Loss: 0.725746\n",
+      "Train Epoch: 4 Batch: 1500 Loss: 0.897053\n",
+      "Train Epoch: 4 Batch: 2000 Loss: 1.208766\n",
+      "Train Epoch: 4 Batch: 2500 Loss: 1.113581\n",
+      "Train Epoch: 4 Batch: 3000 Loss: 1.399014\n"
+     ]
+    }
+   ],
    "source": [
     "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader\n",
     "from tiledb.ml.readers.types import ArrayParams\n",
