--- a/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
@@ -74,82 +74,15 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>196</td>\n",
-       "      <td>242</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>186</td>\n",
-       "      <td>302</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>22</td>\n",
-       "      <td>377</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>244</td>\n",
-       "      <td>51</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>166</td>\n",
-       "      <td>346</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   user_id  item_id  rating\n",
-       "0      196      242       3\n",
-       "1      186      302       3\n",
-       "2       22      377       1\n",
-       "3      244       51       2\n",
-       "4      166      346       1"
-      ]
+      "text/plain": "   user_id  item_id  rating\n0      196      242       3\n1      186      302       3\n2       22      377       1\n3      244       51       2\n4      166      346       1",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>user_id</th>\n      <th>item_id</th>\n      <th>rating</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>196</td>\n      <td>242</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>186</td>\n      <td>302</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>22</td>\n      <td>377</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>244</td>\n      <td>51</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>166</td>\n      <td>346</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
      "data": {
-      "text/plain": [
-       "(100000, 3)"
-      ]
+      "text/plain": "(100000, 3)"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -223,214 +156,15 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>rating</th>\n",
-       "      <th>user_id_1</th>\n",
-       "      <th>user_id_2</th>\n",
-       "      <th>user_id_3</th>\n",
-       "      <th>user_id_4</th>\n",
-       "      <th>user_id_5</th>\n",
-       "      <th>user_id_6</th>\n",
-       "      <th>user_id_7</th>\n",
-       "      <th>user_id_8</th>\n",
-       "      <th>user_id_9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>item_id_1673</th>\n",
-       "      <th>item_id_1674</th>\n",
-       "      <th>item_id_1675</th>\n",
-       "      <th>item_id_1676</th>\n",
-       "      <th>item_id_1677</th>\n",
-       "      <th>item_id_1678</th>\n",
-       "      <th>item_id_1679</th>\n",
-       "      <th>item_id_1680</th>\n",
-       "      <th>item_id_1681</th>\n",
-       "      <th>item_id_1682</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 2626 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   rating  user_id_1  user_id_2  user_id_3  user_id_4  user_id_5  user_id_6  \\\n",
-       "0       3          0          0          0          0          0          0   \n",
-       "1       3          0          0          0          0          0          0   \n",
-       "2       1          0          0          0          0          0          0   \n",
-       "3       2          0          0          0          0          0          0   \n",
-       "4       1          0          0          0          0          0          0   \n",
-       "\n",
-       "   user_id_7  user_id_8  user_id_9  ...  item_id_1673  item_id_1674  \\\n",
-       "0          0          0          0  ...             0             0   \n",
-       "1          0          0          0  ...             0             0   \n",
-       "2          0          0          0  ...             0             0   \n",
-       "3          0          0          0  ...             0             0   \n",
-       "4          0          0          0  ...             0             0   \n",
-       "\n",
-       "   item_id_1675  item_id_1676  item_id_1677  item_id_1678  item_id_1679  \\\n",
-       "0             0             0             0             0             0   \n",
-       "1             0             0             0             0             0   \n",
-       "2             0             0             0             0             0   \n",
-       "3             0             0             0             0             0   \n",
-       "4             0             0             0             0             0   \n",
-       "\n",
-       "   item_id_1680  item_id_1681  item_id_1682  \n",
-       "0             0             0             0  \n",
-       "1             0             0             0  \n",
-       "2             0             0             0  \n",
-       "3             0             0             0  \n",
-       "4             0             0             0  \n",
-       "\n",
-       "[5 rows x 2626 columns]"
-      ]
+      "text/plain": "   rating  user_id_1  user_id_2  user_id_3  user_id_4  user_id_5  user_id_6  \\\n0       3          0          0          0          0          0          0   \n1       3          0          0          0          0          0          0   \n2       1          0          0          0          0          0          0   \n3       2          0          0          0          0          0          0   \n4       1          0          0          0          0          0          0   \n\n   user_id_7  user_id_8  user_id_9  ...  item_id_1673  item_id_1674  \\\n0          0          0          0  ...             0             0   \n1          0          0          0  ...             0             0   \n2          0          0          0  ...             0             0   \n3          0          0          0  ...             0             0   \n4          0          0          0  ...             0             0   \n\n   item_id_1675  item_id_1676  item_id_1677  item_id_1678  item_id_1679  \\\n0             0             0             0             0             0   \n1             0             0             0             0             0   \n2             0             0             0             0             0   \n3             0             0             0             0             0   \n4             0             0             0             0             0   \n\n   item_id_1680  item_id_1681  item_id_1682  \n0             0             0             0  \n1             0             0             0  \n2             0             0             0  \n3             0             0             0  \n4             0             0             0  \n\n[5 rows x 2626 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>rating</th>\n      <th>user_id_1</th>\n      <th>user_id_2</th>\n      <th>user_id_3</th>\n      <th>user_id_4</th>\n      <th>user_id_5</th>\n      <th>user_id_6</th>\n      <th>user_id_7</th>\n      <th>user_id_8</th>\n      <th>user_id_9</th>\n      <th>...</th>\n      <th>item_id_1673</th>\n      <th>item_id_1674</th>\n      <th>item_id_1675</th>\n      <th>item_id_1676</th>\n      <th>item_id_1677</th>\n      <th>item_id_1678</th>\n      <th>item_id_1679</th>\n      <th>item_id_1680</th>\n      <th>item_id_1681</th>\n      <th>item_id_1682</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>3</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 2626 columns</p>\n</div>"
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
      "data": {
-      "text/plain": [
-       "(100000, 2626)"
-      ]
+      "text/plain": "(100000, 2626)"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -705,43 +439,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 11.943394\n",
-      "Train Epoch: 1 Batch: 500 Loss: 1.467998\n",
-      "Train Epoch: 1 Batch: 1000 Loss: 0.881959\n",
-      "Train Epoch: 1 Batch: 1500 Loss: 1.015266\n",
-      "Train Epoch: 1 Batch: 2000 Loss: 1.539459\n",
-      "Train Epoch: 1 Batch: 2500 Loss: 1.285039\n",
-      "Train Epoch: 1 Batch: 3000 Loss: 1.502964\n",
-      "Train Epoch: 2 Batch: 0 Loss: 1.398944\n",
-      "Train Epoch: 2 Batch: 500 Loss: 1.086027\n",
-      "Train Epoch: 2 Batch: 1000 Loss: 0.797786\n",
-      "Train Epoch: 2 Batch: 1500 Loss: 0.949051\n",
-      "Train Epoch: 2 Batch: 2000 Loss: 1.351027\n",
-      "Train Epoch: 2 Batch: 2500 Loss: 1.206539\n",
-      "Train Epoch: 2 Batch: 3000 Loss: 1.452452\n",
-      "Train Epoch: 3 Batch: 0 Loss: 1.320961\n",
-      "Train Epoch: 3 Batch: 500 Loss: 0.968199\n",
-      "Train Epoch: 3 Batch: 1000 Loss: 0.752688\n",
-      "Train Epoch: 3 Batch: 1500 Loss: 0.911840\n",
-      "Train Epoch: 3 Batch: 2000 Loss: 1.260239\n",
-      "Train Epoch: 3 Batch: 2500 Loss: 1.152213\n",
-      "Train Epoch: 3 Batch: 3000 Loss: 1.418210\n",
-      "Train Epoch: 4 Batch: 0 Loss: 1.275772\n",
-      "Train Epoch: 4 Batch: 500 Loss: 0.919216\n",
-      "Train Epoch: 4 Batch: 1000 Loss: 0.724943\n",
-      "Train Epoch: 4 Batch: 1500 Loss: 0.890866\n",
-      "Train Epoch: 4 Batch: 2000 Loss: 1.209634\n",
-      "Train Epoch: 4 Batch: 2500 Loss: 1.110573\n",
-      "Train Epoch: 4 Batch: 3000 Loss: 1.392772\n"
+      "Train Epoch: 1 Batch: 0 Loss: 11.957862\n",
+      "Train Epoch: 1 Batch: 500 Loss: 1.462596\n",
+      "Train Epoch: 1 Batch: 1000 Loss: 0.882187\n",
+      "Train Epoch: 1 Batch: 1500 Loss: 1.023580\n",
+      "Train Epoch: 1 Batch: 2000 Loss: 1.542000\n",
+      "Train Epoch: 1 Batch: 2500 Loss: 1.283772\n",
+      "Train Epoch: 1 Batch: 3000 Loss: 1.512352\n",
+      "Train Epoch: 2 Batch: 0 Loss: 1.396726\n",
+      "Train Epoch: 2 Batch: 500 Loss: 1.075623\n",
+      "Train Epoch: 2 Batch: 1000 Loss: 0.798218\n",
+      "Train Epoch: 2 Batch: 1500 Loss: 0.956591\n",
+      "Train Epoch: 2 Batch: 2000 Loss: 1.351744\n",
+      "Train Epoch: 2 Batch: 2500 Loss: 1.207230\n",
+      "Train Epoch: 2 Batch: 3000 Loss: 1.460682\n",
+      "Train Epoch: 3 Batch: 0 Loss: 1.319887\n",
+      "Train Epoch: 3 Batch: 500 Loss: 0.957528\n",
+      "Train Epoch: 3 Batch: 1000 Loss: 0.753301\n",
+      "Train Epoch: 3 Batch: 1500 Loss: 0.918645\n",
+      "Train Epoch: 3 Batch: 2000 Loss: 1.260010\n",
+      "Train Epoch: 3 Batch: 2500 Loss: 1.154303\n",
+      "Train Epoch: 3 Batch: 3000 Loss: 1.425381\n",
+      "Train Epoch: 4 Batch: 0 Loss: 1.275712\n",
+      "Train Epoch: 4 Batch: 500 Loss: 0.909295\n",
+      "Train Epoch: 4 Batch: 1000 Loss: 0.725746\n",
+      "Train Epoch: 4 Batch: 1500 Loss: 0.897053\n",
+      "Train Epoch: 4 Batch: 2000 Loss: 1.208766\n",
+      "Train Epoch: 4 Batch: 2500 Loss: 1.113581\n",
+      "Train Epoch: 4 Batch: 3000 Loss: 1.399014\n"
      ]
     }
    ],
    "source": [
     "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader\n",
+    "from tiledb.ml.readers.types import ArrayParams\n",
     "\n",
     "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2, \"py.init_buffer_bytes\": 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
-    "    train_loader = PyTorchTileDBDataLoader(x_array=x, y_array=y, batch_size=32, csr=False)\n",
+    "    train_loader = PyTorchTileDBDataLoader(\n",
+    "        x_params=ArrayParams(x),\n",
+    "        y_params=ArrayParams(y),\n",
+    "        batch_size=32,\n",
+    "        csr=False)\n",
     "\n",
     "    #Number of ratings x (user + movies)\n",
     "    datashape_x = (100000, 2625)\n",
