Pass x_params/y_params positionally

--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -366,10 +366,9 @@
     "\n",
     "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
-    "    train_loader = PyTorchTileDBDataLoader(x_params=ArrayParams(x),\n",
-    "                                           y_params=ArrayParams(y),\n",
-    "                                           batch_size=64,\n",
-    "                                           shuffle_buffer_size=128)\n",
+    "    train_loader = PyTorchTileDBDataLoader(\n",
+    "        ArrayParams(x), ArrayParams(y), batch_size=64, shuffle_buffer_size=128\n",
+    "    )\n",
     "    net = Net(shape=(28, 28))\n",
     "    criterion = nn.CrossEntropyLoss()\n",
     "    optimizer = optim.SGD(net.parameters(), lr=0.01, momentum=0.5)\n",
