--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -350,8 +350,8 @@
     "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    tiledb_dataset = TensorflowTileDBDataset(\n",
-    "        x_params=ArrayParams(array=x, fields=['features']),\n",
-    "        y_params=ArrayParams(array=y, fields=['features']),\n",
+    "        ArrayParams(array=x, fields=['features']),\n",
+    "        ArrayParams(array=y, fields=['features']),\n",
     "        batch_size=64, shuffle_buffer_size=128\n",
     "    )\n",
     "    model.fit(tiledb_dataset, epochs=5)"
