--- a/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
@@ -477,11 +477,8 @@
     "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2, \"py.init_buffer_bytes\": 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    train_loader = PyTorchTileDBDataLoader(\n",
-    "        x_params=ArrayParams(x),\n",
-    "        y_params=ArrayParams(y),\n",
-    "        batch_size=32,\n",
-    "        csr=False)\n",
-    "\n",
+    "        ArrayParams(x), ArrayParams(y), batch_size=32, csr=False\n",
+    "    )\n",
     "    #Number of ratings x (user + movies)\n",
     "    datashape_x = (100000, 2625)\n",
     "\n",
