--- a/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
@@ -432,8 +432,8 @@
     "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2, \"py.init_buffer_bytes\": 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    tiledb_dataset = TensorflowTileDBDataset(\n",
-    "        x_params=ArrayParams(array=x, fields=['features']),\n",
-    "        y_params=ArrayParams(array=y, fields=['features']),\n",
+    "        ArrayParams(array=x, fields=['features']),\n",
+    "        ArrayParams(array=y, fields=['features']),\n",
     "        batch_size=32)\n",
     "    model = design_model(input_shape=user_movie.shape[1])\n",
     "    model.fit(tiledb_dataset, epochs=2, batch_size=32)"
