--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -341,7 +341,7 @@
     "import torch.optim as optim\n",
     "\n",
     "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader\n",
-    "from tiledb.ml.readers.types import ArrayParams\n",
+    "from tiledb.ml.readers import ArrayParams\n",
     "\n",
     "class Net(nn.Module):\n",
     "    def __init__(self, shape):\n",
