--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -347,7 +347,7 @@
    ],
    "source": [
     "from tiledb.ml.readers.tensorflow import TensorflowTileDBDataset\n",
-    "from tiledb.ml.readers.types import ArrayParams\n",
+    "from tiledb.ml.readers import ArrayParams\n",
     "\n",
     "model = create_model()\n",
     "\n",
