Array params import to readers (#163)
* Array params import to readers

* Examples same module import for ArrayParams

* Unenecessary since pytorch and tf scripts imports arrayparams

--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -346,8 +346,7 @@
     }
    ],
    "source": [
-    "from tiledb.ml.readers.tensorflow import TensorflowTileDBDataset\n",
-    "from tiledb.ml.readers.types import ArrayParams\n",
+    "from tiledb.ml.readers.tensorflow import TensorflowTileDBDataset, ArrayParams\n",
     "\n",
     "model = create_model()\n",
     "\n",
