--- a/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
@@ -692,8 +692,7 @@
     }
    ],
    "source": [
-    "from tiledb.ml.readers.tensorflow import TensorflowTileDBDataset\n",
-    "from tiledb.ml.readers.types import ArrayParams\n",
+    "from tiledb.ml.readers.tensorflow import TensorflowTileDBDataset, ArrayParams\n",
     "\n",
     "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2, \"py.init_buffer_bytes\": 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
