update notebook examples

--- a/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -700,34 +700,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 12.108133\n",
-      "Train Epoch: 1 Batch: 500 Loss: 1.468744\n",
-      "Train Epoch: 1 Batch: 1000 Loss: 0.881071\n",
-      "Train Epoch: 1 Batch: 1500 Loss: 1.013481\n",
-      "Train Epoch: 1 Batch: 2000 Loss: 1.536968\n",
-      "Train Epoch: 1 Batch: 2500 Loss: 1.285684\n",
-      "Train Epoch: 1 Batch: 3000 Loss: 1.515580\n",
-      "Train Epoch: 2 Batch: 0 Loss: 1.393316\n",
-      "Train Epoch: 2 Batch: 500 Loss: 1.080680\n",
-      "Train Epoch: 2 Batch: 1000 Loss: 0.797219\n",
-      "Train Epoch: 2 Batch: 1500 Loss: 0.947662\n",
-      "Train Epoch: 2 Batch: 2000 Loss: 1.346822\n",
-      "Train Epoch: 2 Batch: 2500 Loss: 1.207333\n",
-      "Train Epoch: 2 Batch: 3000 Loss: 1.462039\n",
-      "Train Epoch: 3 Batch: 0 Loss: 1.314911\n",
-      "Train Epoch: 3 Batch: 500 Loss: 0.961703\n",
-      "Train Epoch: 3 Batch: 1000 Loss: 0.752491\n",
-      "Train Epoch: 3 Batch: 1500 Loss: 0.910743\n",
-      "Train Epoch: 3 Batch: 2000 Loss: 1.255592\n",
-      "Train Epoch: 3 Batch: 2500 Loss: 1.153103\n",
-      "Train Epoch: 3 Batch: 3000 Loss: 1.425676\n",
-      "Train Epoch: 4 Batch: 0 Loss: 1.269645\n",
-      "Train Epoch: 4 Batch: 500 Loss: 0.912843\n",
-      "Train Epoch: 4 Batch: 1000 Loss: 0.724985\n",
-      "Train Epoch: 4 Batch: 1500 Loss: 0.890013\n",
-      "Train Epoch: 4 Batch: 2000 Loss: 1.204954\n",
-      "Train Epoch: 4 Batch: 2500 Loss: 1.111510\n",
-      "Train Epoch: 4 Batch: 3000 Loss: 1.398710\n"
+      "Train Epoch: 1 Batch: 0 Loss: 12.082737\n",
+      "Train Epoch: 1 Batch: 500 Loss: 1.481464\n",
+      "Train Epoch: 1 Batch: 1000 Loss: 0.880795\n",
+      "Train Epoch: 1 Batch: 1500 Loss: 1.015853\n",
+      "Train Epoch: 1 Batch: 2000 Loss: 1.540204\n",
+      "Train Epoch: 1 Batch: 2500 Loss: 1.287778\n",
+      "Train Epoch: 1 Batch: 3000 Loss: 1.500700\n",
+      "Train Epoch: 2 Batch: 0 Loss: 1.394579\n",
+      "Train Epoch: 2 Batch: 500 Loss: 1.088969\n",
+      "Train Epoch: 2 Batch: 1000 Loss: 0.797168\n",
+      "Train Epoch: 2 Batch: 1500 Loss: 0.949196\n",
+      "Train Epoch: 2 Batch: 2000 Loss: 1.349532\n",
+      "Train Epoch: 2 Batch: 2500 Loss: 1.209966\n",
+      "Train Epoch: 2 Batch: 3000 Loss: 1.450671\n"
      ]
     }
    ],
@@ -735,9 +721,12 @@
     "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader, ArrayParams\n",
     "\n",
     "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2, \"py.init_buffer_bytes\": 1024**2})\n",
+    "\n",
+    "dataloader_params = {\"batch_size\": 32}\n",
+    "\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    train_loader = PyTorchTileDBDataLoader(\n",
-    "        ArrayParams(x), ArrayParams(y), batch_size=32, csr=False\n",
+    "        ArrayParams(x), ArrayParams(y), dataloader_params=dataloader_params, csr=False\n",
     "    )\n",
     "    #Number of ratings x (user + movies)\n",
     "    datashape_x = (100000, 2625)\n",
