--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -258,7 +258,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12ffe7640>"
+       "<matplotlib.image.AxesImage at 0x12b972880>"
       ]
      },
      "execution_count": 7,
@@ -313,26 +313,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Epoch: 1 Batch: 0 Loss: 14.259003\n",
+      "Train Epoch: 1 Batch: 0 Loss: 7.341803\n",
       "Train Epoch: 1 Batch: 100 Loss: 2.302585\n",
       "Train Epoch: 1 Batch: 200 Loss: 2.302585\n",
       "Train Epoch: 1 Batch: 300 Loss: 2.302585\n",
       "Train Epoch: 1 Batch: 400 Loss: 2.302585\n",
-      "Train Epoch: 1 Batch: 500 Loss: 2.311349\n",
-      "Train Epoch: 1 Batch: 600 Loss: 1.965141\n",
-      "Train Epoch: 1 Batch: 700 Loss: 2.071231\n",
-      "Train Epoch: 1 Batch: 800 Loss: 1.871267\n",
-      "Train Epoch: 1 Batch: 900 Loss: 1.905761\n",
-      "Train Epoch: 2 Batch: 0 Loss: 1.951554\n",
-      "Train Epoch: 2 Batch: 100 Loss: 1.847873\n",
-      "Train Epoch: 2 Batch: 200 Loss: 1.860846\n",
-      "Train Epoch: 2 Batch: 300 Loss: 2.069581\n",
-      "Train Epoch: 2 Batch: 400 Loss: 1.885491\n",
-      "Train Epoch: 2 Batch: 500 Loss: 2.049599\n",
-      "Train Epoch: 2 Batch: 600 Loss: 2.052642\n",
-      "Train Epoch: 2 Batch: 700 Loss: 2.121343\n",
-      "Train Epoch: 2 Batch: 800 Loss: 2.021918\n",
-      "Train Epoch: 2 Batch: 900 Loss: 2.026648\n"
+      "Train Epoch: 1 Batch: 500 Loss: 2.302585\n",
+      "Train Epoch: 1 Batch: 600 Loss: 2.302585\n",
+      "Train Epoch: 1 Batch: 700 Loss: 2.302585\n",
+      "Train Epoch: 1 Batch: 800 Loss: 2.302585\n",
+      "Train Epoch: 1 Batch: 900 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 0 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 100 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 200 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 300 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 400 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 500 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 600 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 700 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 800 Loss: 2.302585\n",
+      "Train Epoch: 2 Batch: 900 Loss: 2.302585\n"
      ]
     }
    ],
@@ -340,7 +340,8 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
-    "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader, ArrayParams\n",
+    "from tiledb.ml.readers.pytorch import PyTorchTileDBDataLoader\n",
+    "from tiledb.ml.readers.types import ArrayParams\n",
     "\n",
     "class Net(nn.Module):\n",
     "    def __init__(self, shape):\n",
@@ -359,11 +360,14 @@
     "        x = self.flatten(x)\n",
     "        logits = self.linear_relu_stack(x)\n",
     "        return logits\n",
+    "    \n",
+    "dataloader_params = {\"batch_size\": 64,\n",
+    "                     \"num_workers\": 2}\n",
     "\n",
     "ctx = tiledb.Ctx({\"sm.memory_budget\": 1024**2})\n",
     "with tiledb.open(training_images, ctx=ctx) as x, tiledb.open(training_labels, ctx=ctx) as y:\n",
     "    train_loader = PyTorchTileDBDataLoader(\n",
-    "        ArrayParams(x), ArrayParams(y), batch_size=64, shuffle_buffer_size=128\n",
+    "        ArrayParams(x), ArrayParams(y), dataloader_params=dataloader_params, shuffle_buffer_size=128\n",
     "    )\n",
     "    net = Net(shape=(28, 28))\n",
     "    criterion = nn.CrossEntropyLoss()\n",
@@ -387,7 +391,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": []
   }
